Sun Feb 12 14:08:35 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/reserve_space.s: Add.
	* put.c (ReportOverflow): Add.
	(Put_DataWithOffset): Add times parameter. Use ReportOverflow.
	(Put_InsWithOffset): Make use of Put_DataWithOffset.
	* put.h (Put_DataWithOffset): Add times parameter.
	* decode.c (oDecodeTable): Add FILL.
	* area.c, area.h (c_align, c_reserve): Move to...
	* directive_data.c, directive.h: ...here.
	(DefineInt_RelocUpdater, DefineInt): Follow Put_AlignDataWithOffset API
	change.
	(ReserveSpace): Add.
	(c_fill): Add.
	* lit.c (Lit_DumpPool): Follow Put_AlignDataWithOffset API change.

Sat Feb 11 18:01:47 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c, commands.h: Refactor into...
	* directive_data.c, directive_data.h: ...this and...
	* directive_file.c, directive_file.h: ...this and...
	* directive_misc.c, directive_misc.h: ...this and...
	* directive_symbol.c, directive_symbol.h: ...this.
	* Makefile.am, lit.c, decode.c: Follow changes.
	* area.c, macros.c, whileif.c: Remove useless include commands.h.

Sat Feb 11 17:08:51 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* decode.h (Rslt_e): Add.
	* decode.c (po_void, po_void_lc): Return Rslt_e iso bool.
	(po_void_lc): Rename to po_void_pm.
	(po_nolex): Add.
	(decode_table_t::result): Remove.
	(decode_table_t::instr): Add.
	(oDecodeTable): Follow changes.
	* commands.c, commands.h, m_cpuctrl.c, m_cop.c, m_cpuctrl.h, m_cpumem.c,
	m_cop.h, m_cpumem.h, area.c, area.h, m_fpe.c, m_fpe.h, m_copmem.c,
	m_copmem.h, m_cpu.c, m_cpu.h: Follow changes.

Sat Feb 11 13:49:29 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (oDecodeTable): !, ALIGN, AOF, AOUT, AREA, ARM, ASSERT,
	CODE16, CODE32, ENTRY, EXPORT, EXTERN, GET, GLOBAL, IDFN, IMPORT,
	INCLUDE, INFO, KEEP, LTORG, OPT, ORG, PRESERVE8, STRONG, SUBT, THUMBX,
	THUMBX, TTL: Don't allow a label in front of these directives.

Mon Feb  6 04:08:14 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
